tests/sksl/errors/UnscopedVariableInElse.glsl
### Compilation failed:

error: 2: variable 'x' must be created in a scope
    if (true) ; else half x = 1;
                     ^^^^^^^^^^
1 error
